k3s-cluster/gitops/infrastructure/apps/garage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-ui
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage.int.edgedatalab.com`)
      kind: Rule
      middlewares:
        - name: forwardauth
          namespace: authelia
      services:
        - name: garage-garage-ui
          port: 80
  tls:
    certResolver: letsencrypt
